# qjob

./: .dockerignore  .gitignore  README.md  alembic.ini  pyproject.toml
docker/: Dockerfile  docker-compose.yml
examples/: cpu_only.sh  gpu_multi.sh  gpu_single.sh  mixed_cpu_gpu.sh  train.sh
qjob/api/: auth.py  crud.py  schemas.py  server.py
qjob/api/routers/: auth.py  jobs.py  resources.py
qjob/cli/: dashboard.py  main.py  service.py
qjob/core/: database.py  models.py  parser.py  runner.py  scheduler.py
qjob/migrations/: env.py
tests/: conftest.py  test_api.py  test_dashboard.py  test_models_database.py  test_parser.py  test_runner.py  test_scheduler.py  test_scheduling.py
