[project]
name = "qjob"
version = "0.1.0"
description = "A lightweight job scheduler designed for lab-scale GPU servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
qjob = "qjob.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
